# robot

catkin_ws/: .cproject
catkin_ws/devel/: .catkin  .rosinstall
catkin_ws/devel/lib/pkgconfig/: libviso2.pc
catkin_ws/devel/lib/ratslam_ros/: ratslam_em  ratslam_lv  ratslam_pc
catkin_ws2/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws2/devel/include/ratslam_ros/: TopologicalAction.h  TopologicalEdge.h  TopologicalMap.h  TopologicalNode.h  ViewTemplate.h
catkin_ws2/devel/include/viso2_ros/: VisoInfo.h
catkin_ws2/devel/lib/pkgconfig/: libviso2.pc  ratslam_ros.pc  viso2_ros.pc
catkin_ws2/devel/lib/ratslam_ros/: ratslam_em  ratslam_lv  ratslam_odom  ratslam_pc  ratslam_vo
catkin_ws3/devel/: .catkin  .rosinstall  setup.sh
catkin_ws3/devel/include/ratslam_ros/: TopologicalAction.h  TopologicalEdge.h  TopologicalMap.h  TopologicalNode.h  TransAndRot.h  ViewTemplate.h
catkin_ws3/devel/lib/pkgconfig/: libviso2.pc  ratslam_ros.pc
catkin_ws3/devel/lib/ratslam_ros/: ratslam_em  ratslam_lv  ratslam_mono  ratslam_pc  ratslam_vo
catkin_ws3/src/libviso2/: CMakeLists.txt
catkin_ws3/src/libviso2/libviso2/: CMakeLists.txt
catkin_ws3/src/libviso2/libviso2/src/: demo.cpp  viso.cpp  viso.h  viso_mono.cpp  viso_mono.h
catkin_ws3/src/ratslam_ros/: CMakeLists.txt
catkin_ws3/src/ratslam_ros/config/: config_stlucia.txt.in
catkin_ws3/src/ratslam_ros/launch/: kitti.launch  stlucia.launch
catkin_ws3/src/ratslam_ros/msg/: TransAndRot.msg
catkin_ws3/src/ratslam_ros/src/: main_em.cpp  main_lv.cpp  main_mono.cpp  main_pc.cpp  main_vo.cpp
(+55 files in other folders)
